<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F6F5F5"
    tools:context=".Settings">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/SettingCard"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardCornerRadius="5dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/back"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/setting"
            android:textColor="#000000"
            android:textSize="30sp"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <ImageView
            android:id="@+id/menuButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/menu"
            android:src="@drawable/menu"
            android:elevation="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="360dp"/>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/generalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/SettingCard"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/general"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginLeft="30dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/generalConLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/generalText"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editprofile"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:cornerRadius="10dp"
            android:backgroundTint="#fff"
            app:strokeColor="#fff"
            android:text="@string/edit_profile"
            android:textColor="#000"
            android:gravity=""
            android:drawableLeft="@drawable/proficon"
            android:paddingLeft="10dp"
            android:drawableRight="@drawable/chevron"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/ChangePass"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editprofile"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            app:cornerRadius="10dp"
            android:backgroundTint="#fff"
            app:strokeColor="#fff"
            android:text="@string/change_password"
            android:textColor="#000"
            android:gravity=""
            android:drawableLeft="@drawable/unlock"
            android:paddingLeft="10dp"
            android:drawableRight="@drawable/chevron"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ChangePass"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            app:cornerRadius="10dp"
            android:backgroundTint="#fff"
            app:strokeColor="#fff"
            android:text="@string/notification"
            android:textColor="#000"
            android:gravity=""
            android:drawableLeft="@drawable/notification"
            android:paddingLeft="10dp"
            android:drawableRight="@drawable/chevron"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/security"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            app:cornerRadius="10dp"
            android:backgroundTint="#fff"
            app:strokeColor="#fff"
            android:text="@string/security"
            android:textColor="#000"
            android:gravity=""
            android:drawableLeft="@drawable/verified"
            android:paddingLeft="10dp"
            android:drawableRight="@drawable/chevron"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/security"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            app:cornerRadius="10dp"
            android:backgroundTint="#fff"
            app:strokeColor="#fff"
            android:text="@string/language"
            android:textColor="#000"
            android:gravity=""
            android:drawableLeft="@drawable/internet"
            android:paddingLeft="10dp"
            android:drawableRight="@drawable/chevron"
            android:textSize="18sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/prefer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/generalConLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="Preferences"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="35dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/preferConLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/prefer"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/landp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            app:cornerRadius="10dp"
            android:backgroundTint="#fff"
            app:strokeColor="#fff"
            android:text="@string/legal_and_policies"
            android:textColor="#000"
            android:gravity=""
            android:drawableLeft="@drawable/security"
            android:paddingLeft="10dp"
            android:drawableRight="@drawable/chevron"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/help"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/landp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            app:cornerRadius="10dp"
            android:backgroundTint="#fff"
            app:strokeColor="#fff"
            android:text="@string/help_and_support"
            android:textColor="#000"
            android:gravity=""
            android:drawableLeft="@drawable/information"
            android:paddingLeft="10dp"
            android:drawableRight="@drawable/chevron"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/help"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            app:cornerRadius="10dp"
            android:backgroundTint="#fff"
            app:strokeColor="#fff"
            android:text="@string/logout"
            android:textColor="#FF0000"
            android:gravity=""
            android:drawableLeft="@drawable/logout"
            android:paddingLeft="10dp"
            android:drawableRight="@drawable/chevron"
            android:textSize="18sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>